--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +21,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Montserrat:ital,wght@0,400;1,600&family=Prata&family=Raleway:wght@100;400;700&family=Roboto:wght@300;400;700&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>TWO_cycling</title>
 </head>
 
 <body>
